# neural-network-notebooks

./: .gitignore  README.md
Applied Nets/: Simple JAX example.ipynb
Applied Nets/pytorch-and-jax-fashionmnist-classification/: 1a - Simple PyTorch network without the NN module.ipynb  1b - Simple PyTorch network with the NN module.ipynb  1c - Simple JAX example.ipynb  3 - Generalization of the fully connected network.ipynb  pyproject.toml
Applied Nets/pytorch-gan-generating-images/: GAN.ipynb  pyproject.toml
Applied Nets/pytorch-nlp-like-gpt/: GPT like.ipynb  pyproject.toml
Fitting Simple Functions/: Exploring Gradient Descent with 1D ReLUs.ipynb
Micro Nets/: Exploring Gradient Descent with 1D ReLUs.ipynb  Simple 2D classification.ipynb
Simple Deep Learning Examples/: Simple Functional PyTorch.ipynb  Simple PyTorch network with the NN module.ipynb  Simple PyTorch network without the NN module.ipynb
Simple Deep Learning Examples/src/: dataloader.py
